<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".battery">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@color/colorWhite">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/BatteryPercentage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/battery_percentage"
                        android:textAlignment="center"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/pb"
                        android:layout_width="150dp"
                        android:layout_height="150dp">

                        <ProgressBar
                            android:id="@+id/progressBar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@android:style/Widget.Holo.ProgressBar.Horizontal"
                            android:layout_gravity="center_horizontal"/>

                        <TextView
                            android:id="@+id/tv_percentage"
                            android:textSize="25sp"
                            android:textColor="@color/colorBlack"
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </RelativeLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView1"
                        android:text="@string/title_text"
                        android:textSize="20sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textView2"
                        android:text="@string/description_text"
                        android:textSize="20sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/batteryStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/battery_status"
                        android:textSize="18sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginEnd="8dp" />

                    <TextView
                        android:id="@+id/batteryStatusValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_value"
                        android:textSize="18sp"
                        android:textColor="@color/colorPrimary" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/textViewDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:layout_marginTop="8dp" />

                    <TextView
                        android:id="@+id/temperatureLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature"
                        android:textSize="18sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginEnd="8dp" />

                    <TextView
                        android:id="@+id/temperatureValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature_value"
                        android:textSize="18sp"
                        android:textColor="@color/colorPrimary" />

                </TableRow>

            </TableLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>